# crawler

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Crawler.py  DatabaseManager.py  LICENSE  LinkExtractor.py  Logger.py  PageFetcher.py  README.md  RobotsParser.py  config.py  crawler.py  crawler_app.py  database.py  extractors.py  main.py  processors.py  proxies.py  pyproject.toml  rendering.py  requirements-js.txt  requirements.txt  similarity.py  utils.py
config/: news-sites-gr.json  sites.json
docs/: architecture_review.md  code_review_plagiarism_implementation.md  decoupling_plan.md  future_architectural_patterns.md  implementation_plan_modular_directory_structure_and_InfoExtractor_URL_Routing_migration.md  memory_review.md  performance_analysis.md  plagiarism_detection_proposal.md
docs/c4/: c4_code.md  c4_component.md  c4_container.md  c4_context.md
docs/reviews_implementation_plans/: architecture_review.md  code_review_plagiarism_implementation.md  implementation_plan_lock_contention_on_the_WAL_central_database.md  implementation_plan_plagiarism_detection_phase_1.md  implementation_plan_producer_consumer_queue.md  review_and_recommendations_networking_python.md
extractors/: __init__.py  base.py  generic.py  news_sites.py
processors/: __init__.py  base.py  forum.py  news.py  supermarket.py
scratch/: README.md  compare_parsers.py
scripts/: crawl-by-config.ps1  crawl-links.ps1
