[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echidna"
version = "0.1.0"
description = "A general-purpose, polite producer-consumer web crawler designed for news portals, supermarkets, forums, and other websites, featuring plagiarism and similarity analysis."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Stavros" }
]
dependencies = [
    "requests==2.32.3",
    "beautifulsoup4==4.13.3",
    "certifi==2025.1.31",
    "trafilatura>=1.8.0",
    "newspaper3k>=0.2.8",
    "PySocks>=1.7.1",
]

[project.optional-dependencies]
js = [
    "playwright>=1.40.0",
    "selenium>=4.15.0",
    "pyppeteer>=1.0.2",
]
dev = [
    "pre-commit==3.5.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"
